# MyGO

./: README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
src/MyTeam/agent/: __init__.py  agent.py  agent_system.py  llm.py
src/MyTeam/agent/team/: simple.py
src/MyTeam/dataset/: base.py
src/MyTeam/dataset/mmlu/: download.py  download.sh  instance_generation.py  instance_generation.sh  mmlu.py
src/MyTeam/jupyter/: dev.ipynb
src/MyTeam/jupyter/.ipynb_checkpoints/: dev-checkpoint.ipynb
src/MyTeam/main/: infer.py  main.py
src/MyTeam/script/dev/: run.sh
src/MyTeam/team/: base.py  two_player.py
src/MyTeam/utils/: utils.py
src/multi_agent_lab/: __init__.py
